# SecDev-Simple-Blog-Project

./: .dockerignore  .env.example  .hadolint.yaml  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  SECURITY.md  START.md  compose.yaml  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt  sbom.json  trivy-report.txt
.github/workflows/: ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
EVIDENCE/P09/: sbom-syft.json  sbom.json  sca_report.json  sca_summary.md
EVIDENCE/P10/: sast_summary.md  semgrep.sarif
EVIDENCE/P11/: zap_baseline.html  zap_baseline.json
app/: main.py
app/core/: __init__.py  auth.py
app/src/: rate_limit.py  rfc7807_handler.py  schemas.py  upload_secure.py
docs/adr/: ADR-001-RFC 7807.md  ADR-002-JWT&Auth.md  ADR-003-Input validation.md
docs/security/: p10-secrets-playbook.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
iac/: docker-compose.yaml
policy/: waivers.yml
reports/: junit.xml  report.html
security/: .gitleaks.toml  checkov.yaml  hadolint.yaml  trivy.yaml
security/semgrep/: rules.yml
tests/: conftest.py  test_api_integration.py  test_errors.py  test_schemas.py  test_secure_coding.py  test_secure_controls.py  test_secure_upload.py
