[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv",".venv","build","dist"]

[tool.ruff.lint]
select = ["E","F","W","I"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.bandit]
exclude_dirs = ["venv", ".venv", "build", "dist", "tests"]
skips = ["B101"]  # Skip assert_used (ok in tests)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["venv", ".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Coverage опции можно добавить в CI или запускать вручную:
# pytest --cov=app --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=80

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-blog-app"
version = "0.1.0"
description = "Simple Blog Application with FastAPI"
authors = [{name = "Student"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "PyJWT>=2.0.0",
    "starlette>=0.40.0",
    "httpx>=0.25.0"
]
readme = "README.md"

[tool.setuptools.packages.find]
exclude = ["tests*", "reports*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0"
]
